--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color:black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Leba.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">LEBA ANNA MATHEW</h5>
@@ -357,9 +357,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%;height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Thamjid.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">THAMJID NOUSHAL</h5>
@@ -368,9 +368,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Megha.jpeg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">MEGHA BARRY</h5>
@@ -379,9 +379,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Zakiyya.JPG" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ZAKIYYA</h5>
@@ -394,9 +394,9 @@
                 <br />
 
 
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Fayrooz.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FAIROOZ RAHIM</h5>
@@ -405,9 +405,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Rithwik.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">RITHWIK MOHAN</h5>
@@ -416,9 +416,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Vishal.JPG" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">VISHAL VINOD</h5>
@@ -428,9 +428,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Antony.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ANTONY</h5>
@@ -439,9 +439,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Ashif.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ASHIF BASHEER</h5>
@@ -450,9 +450,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Vaishnav.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">VAISHNAV ANOOP</h5>
@@ -461,9 +461,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Shadha.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">SHADHA</h5>
@@ -472,9 +472,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Azad.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">AZAD S NAVAS</h5>
@@ -483,9 +483,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Abhishek Vijayan~2.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ABHISHEK VIJAYAN</h5>
@@ -494,9 +494,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/farzeena.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FARZEENA IBRAHIM</h5>
