--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
                                 style="font-family: tedFont;">November 22nd, 2020</span>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
-                                style="font-family: tedFont;"> - 09.00 AM IST</span>
+                                style="font-family: tedFont;"> - 09.00 AM</span>
                             <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                                 <p style="font-family: tedFont;">TKM College of Engineering, Kollam</p>
                             </a>
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                             <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-                                <h3 id="counter" style=" margin-top: 3%; font-family: tedFont; font-size: xx-large;">00d 00h 00m 00s</h3>
+                                <h3 id="counter" style=" margin-top: 6%; font-family: tedFont; font-size: xx-large;">00d 00h 00m 00s</h3>
                             </a>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;"> 
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -252,7 +252,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -270,7 +270,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -348,8 +348,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color:black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color:black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Leba.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">LEBA ANNA MATHEW</h5>
@@ -358,8 +358,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%;height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%;height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Thamjid.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">THAMJID NOUSHAL</h5>
@@ -369,8 +369,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Megha.jpeg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">MEGHA BARRY</h5>
@@ -380,8 +380,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Zakiyya.JPG" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ZAKIYYA</h5>
@@ -395,8 +395,8 @@
 
 
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Fayrooz.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FAIROOZ RAHIM</h5>
@@ -406,8 +406,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Rithwik.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">RITHWIK MOHAN</h5>
@@ -417,8 +417,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Vishal.JPG" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">VISHAL VINOD</h5>
@@ -429,8 +429,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Antony.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ANTONY</h5>
@@ -440,8 +440,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Ashif.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ASHIF BASHEER</h5>
@@ -451,8 +451,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Vaishnav.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">VAISHNAV ANOOP</h5>
@@ -462,8 +462,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Shadha.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">SHADHA</h5>
@@ -473,8 +473,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Azad.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">AZAD S NAVAS</h5>
@@ -484,8 +484,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Abhishek Vijayan~2.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ABHISHEK VIJAYAN</h5>
@@ -495,8 +495,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/farzeena.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FARZEENA IBRAHIM</h5>
