--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Megha.jpeg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">MEGHA BARRY</h5>
@@ -381,7 +381,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Zakiyya.JPG" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ZAKIYYA</h5>
@@ -396,7 +396,7 @@
 
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Fayrooz.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FAIROOZ RAHIM</h5>
@@ -407,7 +407,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Rithwik.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">RITHWIK MOHAN</h5>
@@ -418,7 +418,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Vishal.JPG" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">VISHAL VINOD</h5>
@@ -430,7 +430,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Antony.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ANTONY</h5>
@@ -441,7 +441,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Ashif.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ASHIF BASHEER</h5>
@@ -452,7 +452,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Vaishnav.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">VAISHNAV ANOOP</h5>
@@ -463,7 +463,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Shadha.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">SHADHA</h5>
@@ -474,7 +474,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Azad.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">AZAD S NAVAS</h5>
@@ -485,7 +485,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Abhishek Vijayan~2.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">ABHISHEK VIJAYAN</h5>
@@ -496,7 +496,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/farzeena.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FARZEENA IBRAHIM</h5>
