--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Theme:</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The evolution of the
+                        <p id= "about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The evolution of the
                             hominid species from the primitive habilus to modern-day sapiens took over
                             two million years. Being the most evolved and intelligent species on planet Earth ,are
                             humans
@@ -160,7 +160,7 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a nonprofit
+                        <p id= "about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a nonprofit
                             devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
                             less). TED began in 1984 as a conference where Technology, Entertainment and Design
                             converged, and today covers almost all topics - from science to business to global issues -
@@ -173,7 +173,7 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a global
+                        <p id= "about3" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a global
                             community, welcoming those people from every discipline and culture that passionately
                             believe in the power of ideas to change attitudes, lives and, ultimately, the world. TED
                             aims to build a clearinghouse of free knowledge from the world's most inspired thinkers
@@ -186,7 +186,7 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">At its premier edition in
+                        <p id= "about4" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">At its premier edition in
                             2018, with the theme of "Alchemy", TEDxTKMCE brought 8 illustrious speakers from across
                             the world and from different stratas of society. Aiming to bust myths and unravel lustrous
                             possibilities.
@@ -349,7 +349,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color:black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Leba.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">LEBA ANNA MATHEW</h5>
@@ -359,7 +359,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="card" style="background-color: black; padding: 10%;height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; max-height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Thamjid.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">THAMJID NOUSHAL</h5>
