--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                             src="./img/tedteam/Leba.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">LEBA ANNA MATHEW</h5>
-                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">LICENSEE/ORGANISER</h6>
+                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">ORGANISER</h6>
                         </div>
                     </div>
                 </div>
