--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -116,11 +119,19 @@
                                     <a id="get_tkt" href="./register.html" style="font-family: tedFont;">Get Tickets
                                         Now</a>
                                 </div>
+                                
                             </div>
-                            <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-                                <h3 id="counter" style=" margin-top: 6%; font-family: tedFont; font-size: 37px;">00d
-                                    00h 00m 00s</h3>
-                            </a>
+
+                            <!-- countdown area start -->
+                            <div class="mt-4" >
+                                <div>
+                                    <div id="counterArea" style="margin-left: auto; margin-right: auto;">
+
+                                    </div>
+                                </div>
+                            </div>
+                            <script src="./js/counter.js"></script>
+                            <!-- countdown area end  -->
                         </div>
                     </div>
                 </div>
@@ -137,7 +148,8 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Theme:</h3>
-                        <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align: justify;">The evolution
+                        <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                            style="text-align: justify;">The evolution
                             of the
                             hominid species from the primitive habilus to modern-day sapiens took over
                             two million years. Being the most evolved and intelligent species on planet Earth ,are
@@ -162,7 +174,8 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3>
-                        <p id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align: justify;">TED is a
+                        <p id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                            style="text-align: justify;">TED is a
                             nonprofit
                             devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
                             less). TED began in 1984 as a conference where Technology, Entertainment and Design
@@ -176,7 +189,8 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
-                        <p id="about3" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align: justify;">TED is a
+                        <p id="about3" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                            style="text-align: justify;">TED is a
                             global
                             community, welcoming those people from every discipline and culture that passionately
                             believe in the power of ideas to change attitudes, lives and, ultimately, the world. TED
@@ -190,7 +204,8 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3>
-                        <p id="about4" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align: justify;">At its
+                        <p id="about4" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                            style="text-align: justify;">At its
                             premier edition in
                             2018, with the theme of "Alchemy", TEDxTKMCE brought 8 illustrious speakers from across
                             the world and from different stratas of society. Aiming to bust myths and unravel lustrous
@@ -537,11 +552,11 @@
                                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Address
                                         </h3>
                                         <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                            TKM College of Engineering,<br/>
-                                            Karicode,Kollam-691005,<br/>
+                                            TKM College of Engineering,<br />
+                                            Karicode,Kollam-691005,<br />
                                             Kerala,India
                                         </p>
-                                       
+
 
                                     </div>
 
@@ -549,7 +564,7 @@
                                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Connect
                                             with us</h3>
                                         <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                            contact@tedxtkmce.in 
+                                            contact@tedxtkmce.in
                                         </p>
 
                                     </div>
@@ -612,38 +627,6 @@
 
 
     <script src="js/main.js"></script>
-
-    <script>
-        var countDownDate = new Date("Nov 22, 2020 09:00:00").getTime();
-
-        // Update the count down every 1 second
-        var x = setInterval(function () {
-
-            // Get today's date and time
-            var now = new Date().getTime();
-
-            // Find the distance between now and the count down date
-            var distance = countDownDate - now;
-
-            // Time calculations for days, hours, minutes and seconds
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-            // Display the result in the element with id="demo"
-            document.getElementById("counter").innerText = days + "d " + hours + "h "
-                + minutes + "m " + seconds + "s ";
-
-            // If the count down is finished, write some text
-            if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("counter").innerHTML = "Event has started";
-            }
-        }, 1000);
-    </script>
-
-
 
 </body>
 
